--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ footer {
     grid-area: llamada;
     width: 100%;
     height: 100%;
-    background-color: rebeccapurple;
+    /* background-color: rebeccapurple; */
     display: flex;
     justify-content: center;
     align-items: center;
