--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
     overflow-x: hidden;
     height: 500vh;
     grid-template-columns: 1fr;
-    grid-template-rows: .20fr 1fr 1fr 1fr .20fr .70fr .70fr .40fr;
+    grid-template-rows: .20fr 1.5fr 1fr 1fr .20fr .70fr .70fr .40fr;
     grid-template-areas: 
     "header"
     "llamada"
@@ -56,9 +56,9 @@ footer {
     grid-area: llamada;
     width: 100%;
     height: 100%;
-    /* background-color: rebeccapurple; */
+    background-color: rebeccapurple;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
 
 }
